added missing meta tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="./style.css" rel="stylesheet">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <script defer src="https://unpkg.com/vue@next"></script>
     <script defer src="./app.js"></script>
 </head>
