--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                     </button>
                 </div>
 
-                <input v-if="!word.correct" v-model="word.answer" type="text"
-                       @input="onInputRemoveClassValidity(word)"
+                <input v-if="!word.correct" v-model="word.answer" type="text" @input="onInputRemoveClassValidity(word)"
                        @keyup.enter="onKeyupValidateAnswer(word)">
                 <p v-else class="correctAnswer">{{ word.word_b }}</p>
             </div>
